--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+            <title>Illiad</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,9 +30,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="#work" class="icon fa-folder"><span>Demo</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#" class="icon fa-twitter"><span>Twitter</span></a>
+						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -41,8 +41,8 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Illiad</h1>
+									<p>Illinois acoustic database</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -53,12 +53,11 @@
 						<!-- Work --> 
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Demo</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit. 
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia 
-									luctus elit eget interdum.
+                                                                    The Illinois acoustic database is an acoustic database server that 
+                                                                    stores acoustic events for later and/or realtime processing.
 								</p>
 								<section>
 									<div class="row">
@@ -147,7 +146,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Copyright (c) 2014 <a href="https://sites.google.com/site/longle1illinois/home">Long Le</a>.</li><li>Design <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 		
