add needed js for index.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@
 								<section>
 									<div class="row">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="rtsosv.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
