add demo with alma-mater

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,10 +62,10 @@
 								<section>
 									<div class="row">
 										<div class="4u">
-											<a href="rtsosv.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="rtsosv.hmtl" class="image"><img src="images/alma-mater.jpg" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
