--- a/public_html/rtsosv.html
+++ b/public_html/rtsosv.html
@@ -16,7 +16,7 @@ and open the template in the editor.
         <script src="js/sosv.min.js"></script>
         <script>
             $(function(){
-                new SOSV('data/demo.json');
+                new SOSV('data/alma-mater.json');
             });
         </script>
         
