working on js now

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@
 								<section>
 									<div class="row">
 										<div class="4u">
-											<a href="rtsosv.hmtl" class="image"><img src="images/alma-mater.jpg" alt=""></a>
+											<a href="rtsosv.html" class="image"><img src="images/alma-mater.jpg" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
