readd nbproject to .gitignore

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,17 +60,12 @@
                                                                     stores acoustic events for later and/or realtime processing.
 								</p>
 								<section>
+                                                                        <div class="row">
+                                                                            <a href="rtsosv.html" class="image"><img style="width:100%; height:100%;" src="images/alma-mater.jpg" alt=""></a>
+                                                                        </div>
 									<div class="row">
-										<div class="4u">
-											<a href="rtsosv.html" class="image"><img src="images/alma-mater.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-									</div>
+                                                                            <iframe style="width:100%; height:100%;" src="//www.youtube.com/embed/LasqZwXG37g" frameborder="0" allowfullscreen></iframe>
+                                                                        </div>
 									<div class="row">
 										<div class="4u">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
