fix website's flickering problem by rescaling images properly

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/illinois.jpg" alt="" />
 								</a>
 							</article>
 
@@ -60,45 +60,45 @@
                                                                     stores acoustic events for later and/or realtime processing.
 								</p>
 								<section>
-                                                                        <div class="row">
-                                                                            <a href="rtsosv.html" class="image"><img style="width:100%; height:100%;" src="images/alma-mater.jpg" alt=""></a>
-                                                                        </div>
-									<div class="row">
-                                                                            <iframe style="width:100%; height:100%;" src="//www.youtube.com/embed/LasqZwXG37g" frameborder="0" allowfullscreen></iframe>
-                                                                        </div>
-									<div class="row">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row">
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
+                                                                    <div class="row">
+                                                                        <a href="rtsosv.html" class="image"><img src="images/alma-mater.jpg" alt=""></a>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                        <iframe src="//www.youtube.com/embed/LasqZwXG37g" frameborder="0" allowfullscreen></iframe>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+                                                                            </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+                                                                            </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+                                                                            </div>
+                                                                            <div class="4u">
+                                                                                    <a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+                                                                            </div>
+                                                                    </div>
 								</section>
 							</article>
 
