finish coding googlemap.html and illiad.js. Now need to debug

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Applications</span></a>
+						<a href="#work" class="icon fa-folder"><span>Demo applications</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Github</span></a>
 					</nav>
@@ -53,7 +53,7 @@
 						<!-- Work --> 
 							<article id="work" class="panel">
 								<header>
-									<h2>Applications</h2>
+									<h2>Demo applications</h2>
 								</header>
 								<p>
                                                                     The Illinois acoustic database is an acoustic database server that 
@@ -65,7 +65,7 @@
                                                                                     <a href="sosv.html" class="image"><img style="position:relative" src="images/alma-mater.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+                                                                                    <a href="googlemap.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
