fix the typo with passwd, instead of pwd, that was causing error 500

--- a/public_html/googlemap.html
+++ b/public_html/googlemap.html
@@ -55,7 +55,8 @@ THE SOFTWARE.
                     time2: document.getElementById("textbox2").value
                 };
                 //var file = IllTimeQuery('publicDb', 'publicUser', 'publicPwd', q);
-                IllDownData('publicDb', 'publicUser', 'publicPwd', '20140903072620320.wav');
+                //IllDownData('publicDb', 'publicUser', 'publicPwd', '20140903072620320.wav');
+                var tmp = IllDownEvent('publicDb', 'publicUser', 'publicPwd', '20140903072620320.wav');
             } 
         </script>
         
