debugging the replacement of json data with js object in sosv.js

--- a/public_html/googlemap.html
+++ b/public_html/googlemap.html
@@ -41,7 +41,7 @@ THE SOFTWARE.
             var infoWinList = [];
             var audioCtx = new AudioContext();
             $(function(){
-                var myTimer=setInterval(function(){updateCurrTime()},1000);
+                var myTimer=setInterval(function(){updateCurrTime();},1000);
             });
             
             function initialize(){
