try to trick browser using pop-up window

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -58,6 +58,8 @@
 								<p>
                                                                     The Illinois acoustic database is an acoustic database server that 
                                                                     stores acoustic events for later and/or realtime processing.
+                                                                    The following web applications demonstrate the Illiad service.
+                                                                    (Certificate acceptance required)
 								</p>
 								<section>
                                                                     <div class="row">
