--- a/public_html/googlemap.html
+++ b/public_html/googlemap.html
@@ -37,7 +37,7 @@ THE SOFTWARE.
         <script src="js/oms.min.js"></script>
 
         <script>
-            window.open("https://acoustic.ifp.uiuc.edu");
+            window.open("https://acoustic.ifp.uiuc.edu:8081");
             
             var map;
             var oms;
