add browser trick to sosv.html

--- a/public_html/sosv.html
+++ b/public_html/sosv.html
@@ -16,7 +16,10 @@ and open the template in the editor.
         <script src="js/howler.js"></script>
         <script src="js/sosv2.js"></script>
         <script src="js/illiad.js"></script>
+
         <script>
+            window.open("https://acoustic.ifp.uiuc.edu:8081");
+
             var lastTime = new Date().toISOString();
             var data = {
                 id: "pano",
