add more comments about the usage of function closure in event listener

--- a/public_html/googlemap.html
+++ b/public_html/googlemap.html
@@ -72,12 +72,22 @@ THE SOFTWARE.
                 });
                 oms.addListener('spiderfy', function(markers) {
                     for (var i = 0; i <markers.length;i++){
+                        // Using function closure
                         google.maps.event.addListener(markers[i], 'mouseover', (function(marker) {
                             return function(){
                                 iw.setContent(marker.desc);
                                 iw.open(map, marker);
                             };
                         })(markers[i]));
+                        /*
+                        (function(marker){
+                            google.maps.event.addListener(marker, 'mouseover', function(){
+                                iw.setContent(marker.desc);
+                                iw.open(map, marker);
+                            });
+                        })(markers[i]);
+                        */
+                        
                         google.maps.event.addListener(markers[i], 'mouseout', function(){
                             iw.close();
                         });
