better time box with label and init current value. add comments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,7 +59,7 @@
                                                                     The Illinois acoustic database is an acoustic database server that 
                                                                     stores acoustic events for later and/or realtime processing.
                                                                     The following web applications demonstrate the Illiad service.
-                                                                    (Certificate acceptance required)
+                                                                    (Certificate acceptance required, tested on Chrome)
 								</p>
 								<section>
                                                                     <div class="row">
