add license comments. Add interface for acoustic search in as.html(renamed from googlemap.html)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Demo applications</span></a>
+						<a href="#work" class="icon fa-folder"><span>Demo</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Github</span></a>
 					</nav>
@@ -67,7 +67,7 @@
                                                                                     <a href="sosv.html" class="image fit"><img src="images/alma-mater.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="googlemap.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
+                                                                                    <a href="as.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
