add the IllUpdateField method. Debugged kwDat.

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -211,7 +211,7 @@ THE SOFTWARE.
             <form id="formSpeech">
                 <fieldset>
                     <legend id="speech">Speech</legend>
-                    <label class="label1">Keyword</label> <input size="25" type="text" id="kw" value=""/><br>
+                    <label class="label1">Keyword</label> <input size="25" type="text" id="kw" value="hello"/><br>
                     <label> </label>
                 </fieldset>
             </form>
