add cb_fail and replace cb with cb_done in illiad functions. Update as.html to alert in case there is no event found

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -149,6 +149,8 @@ THE SOFTWARE.
                         marker.setMap(map);
                         oms.addMarker(marker);
                     }
+                }, function(){
+                    alert("No event found!");
                 });
                 //IllDownData('publicDb', 'publicUser', 'publicPwd', '20140903072620320.wav');
                 //IllDownEvent('publicDb', 'publicUser', 'publicPwd', '20140903072620320.wav');
