add illiad.min.js and update as.html and sosv.html accordingly

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -32,7 +32,7 @@ THE SOFTWARE.
             src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD5NvcrQ54Rbzdxpo3FtJsAyvUjy6O3cn4&sensor=false">
         </script>
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="js/illiad.js"></script>
+        <script src="js/illiad.min.js"></script>
         <script src="js/jquery-ajax-blob-arraybuffer.js"></script>
         <script src="js/oms.min.js"></script>
 
