--- a/public_html/sosv.html
+++ b/public_html/sosv.html
@@ -33,7 +33,7 @@ THE SOFTWARE.
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/howler.js"></script>
         <script src="js/sosv2.js"></script>
-        <script src="js/illiad.js"></script>
+        <script src="js/illiad.min.js"></script>
 
         <script>
             window.open("https://acoustic.ifp.uiuc.edu:8081");
