--- a/public_html/as.html
+++ b/public_html/as.html
@@ -129,6 +129,18 @@ THE SOFTWARE.
                 if (document.getElementById("f2").value){
                     q.f2 = document.getElementById("f2").value;
                 }
+                if (document.getElementById("dur1").value){
+                    q.dur1 = document.getElementById("dur1").value;
+                }
+                if (document.getElementById("dur2").value){
+                    q.dur2 = document.getElementById("dur2").value;
+                }
+                if (document.getElementById("lnp1").value){
+                    q.lnp1 = document.getElementById("lnp1").value;
+                }
+                if (document.getElementById("lnp2").value){
+                    q.lnp2 = document.getElementById("lnp2").value;
+                }
                 if (document.getElementById("lat").value && document.getElementById("lng").value){
                     q.loc = [document.getElementById("lat").value, document.getElementById("lng").value];
                 }
@@ -198,6 +210,22 @@ THE SOFTWARE.
                     <legend id="freq">Frequency</legend>
                     <label class="label1">Lower frequency (Hz)</label> <input size="25" type="text" id="f1" value="0"/><br>
                     <label class="label1">Upper frequency (Hz)</label> <input size="25" type="text" id="f2" value="4000"/>
+                </fieldset>
+            </form>
+            
+            <form id="formDur">
+                <fieldset>
+                    <legend id="dur">Duration</legend>
+                    <label class="label1">Lower duration (s)</label> <input size="25" type="text" id="dur1" value="0.0"/><br>
+                    <label class="label1">Upper duration (s)</label> <input size="25" type="text" id="dur2" value="10.0"/>
+                </fieldset>
+            </form>
+            
+            <form id="formLnp">
+                <fieldset>
+                    <legend id="lnp">Log Noise Probability</legend>
+                    <label class="label1">Lower log probability</label> <input size="25" type="text" id="lnp1" value=""/><br>
+                    <label class="label1">Upper log probability</label> <input size="25" type="text" id="lnp2" value="0.0"/>
                 </fieldset>
             </form>
 
