add large negative value for init lnp1

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -224,7 +224,7 @@ THE SOFTWARE.
             <form id="formLnp">
                 <fieldset>
                     <legend id="lnp">Log Noise Probability</legend>
-                    <label class="label1">Lower log probability</label> <input size="25" type="text" id="lnp1" value=""/><br>
+                    <label class="label1">Lower log probability</label> <input size="25" type="text" id="lnp1" value="-1e6"/><br>
                     <label class="label1">Upper log probability</label> <input size="25" type="text" id="lnp2" value="0.0"/>
                 </fieldset>
             </form>
