add refined query to sosv.html: lower duration, upper lnp, location

--- a/public_html/sosv.html
+++ b/public_html/sosv.html
@@ -92,6 +92,10 @@ THE SOFTWARE.
                     t1: lastTime,
                     t2: currTime
                 };
+                q.dur1 = 0.5;
+                q.lnp2 = -500;
+                q.loc = [40.109789,-88.227261];
+                q.rad = 0.5;
                 
                 // clear old sound set
                 data.sounds = [];
